# Rust_todo_web_app

./: .env  Cargo.toml  README.md
css/: index.css
js/: index.js
migrations/2024-03-26-144758_create_todos/: up.sql
src/: main.rs  models.rs  schema.rs
templates/: index.html
