[package]
name = "todo_web_app"
version = "0.1.0"
edition = "2021"

# ... rest of your Cargo.toml content ...


[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["json"] }
rocket_sync_db_pools = { version = "0.1.0-rc.4", features = ["diesel_postgres_pool"] }
diesel = { version = "1.4.8", features = ["postgres", "chrono", "r2d2"] }
dotenv = "0.15.0"
chrono = { version = "0.4.24", features = ["serde"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0"
diesel_migrations = "1.4.0"
env_logger = "0.9.0"
rocket_contrib = { version = "0.4.0-rc.2", features = ["databases"] }

[dependencies.rocket_codegen]
version = "0.5.0-rc.1"

[dependencies.r2d2-diesel]
version = "0.15.0"

[dependencies.r2d2]
version = "0.8.9"


